# unir-cicd

./: .coveragerc  Dockerfile  Jenkinsfile.simple.groovy  Makefile  README.md  pyproject.toml  requirements.txt
jenkins/: Dockerfile  docker-compose.yml
test/e2e/: cypress.json
test/e2e/cypress/integration/: calc.spec.js
test/rest/: api_test.py
test/unit/: calc_test.py
web/: .dockerignore  Dockerfile  constants.local.js  constants.test.js
